@@ -1,43 +1,81 @@
 // $Id$
+//
+// Open eGovernment
+// Copyright (C) 2005-2010 by Gerrit M. Albrecht
+//
+// This program is free software: you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 3
+// of the License, or (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+// See the GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-#include "winver.h"
+#if defined(UNDER_CE)
+#  include <winbase.h>
+#else
+#  include <winver.h>
+#endif
 
-1 ICON DISCARDABLE "application.ico"
+#pragma code_page(1252)
+
+1 ICON DISCARDABLE "..\\..\\..\\..\\common\\application.ico"
+
+#define VER_FILEVERSION             1,0,0,0
+#define VER_FILEVERSION_STR         "1.0.0.0\0"
+
+#define VER_PRODUCTVERSION          1,0,0,0
+#define VER_PRODUCTVERSION_STR      "1.0.0.0\0"
+
+#ifdef _DEBUG
+#define VER_DEBUG VS_FF_DEBUG
+#else
+#define VER_DEBUG 0x0L
+#endif
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION    1,0,0,0
- PRODUCTVERSION 1,0,0,0
- FILEFLAGSMASK  0x3fL
-#ifdef _DEBUG
-  //VS_FF_DEBUG
-  FILEFLAGS 0x1L
-#else
-  FILEFLAGS 0x0L
-#endif
- //VOS__WINDOWS32
- FILEOS         0x00040000L
- //VFT_DLL
- FILETYPE       0x2L
- FILESUBTYPE    0x0L
+FILEVERSION     VER_FILEVERSION
+PRODUCTVERSION  VER_PRODUCTVERSION
+FILEFLAGSMASK   VS_FFI_FILEFLAGSMASK   // 0x3F
+FILEFLAGS       VER_DEBUG
+FILEOS          VOS__WINDOWS32         // 0x00040000L
+FILETYPE        VFT_APP                // 0x1
+FILESUBTYPE     VFT2_UNKNOWN           // 0x0
 BEGIN
-    BLOCK "StringFileInfo"
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904E4"
     BEGIN
-        BLOCK "040904e4"
-        BEGIN
-            VALUE "CompanyName",      "gasi.de"
-            VALUE "FileDescription",  "About Dialog"
-            VALUE "FileVersion",      "1, 0, 0, 0\0"
-            VALUE "LegalCopyright",   "Copyright (C) 2010 gasi.de."
-            VALUE "InternalName",     "about dialog.exe\0"
-            VALUE "LegalTrademarks",  "\0"
-            VALUE "OriginalFilename", "about dialog.exe"
-            VALUE "ProductName",      "OEG :: About Dialog"
-            VALUE "ProductVersion",   "1, 0, 0, 0\0"
-        END
+      VALUE "InternalName",     "about dialog.exe\0"
+      VALUE "OriginalFilename", "about dialog.exe\0"
+      VALUE "FileDescription",  "Open eGovernment: About Dialog.\0"
+      VALUE "Comments",         "Homepage: www.open-egov.de\0"
+      VALUE "CompanyName",      "gasi.de\0"
+      VALUE "LegalCopyright",   "Copyright (C) 2004-2010 GASI.\0"
+      VALUE "LegalTrademarks",  "Open eGovernment.\0"
+      VALUE "ProductName",      "OEG :: About Dialog\0"
+      VALUE "FileVersion",      VER_FILEVERSION_STR
+      VALUE "ProductVersion",   VER_PRODUCTVERSION_STR
     END
-    BLOCK "VarFileInfo"
-    BEGIN
-        VALUE "Translation", 0x409, 1252
-    END
+  END
+
+  BLOCK "VarFileInfo"
+  BEGIN
+    // The following line should only be modified for localized versions.
+    // It consists of any number of WORD,WORD pairs, with each pair
+    // describing a language,codepage combination supported by the file.
+    //
+    // For example, a file might have values "0x409,1252" indicating that it
+    // supports English language (0x409) in the Windows ANSI codepage (1252).
+    //
+    // http://msdn.microsoft.com/en-us/library/aa381058%28VS.85%29.aspx
+
+    VALUE "Translation", 0x409, 1252
+  END
 END
 
