@@ -4,7 +4,7 @@ TARGET    = address-book
 SOURCES   = *.cpp
 HEADERS   = *.h
 FORMS     = 
-QT       += xml network
+QT       += xml network sql
 PACKAGES  = QT GETTEXT
 #CONFIG   += console
 
