@@ -1,7 +1,24 @@
 // $Id$
+//
+// Open eGovernment
+// Copyright (C) 2005-2010 by Gerrit M. Albrecht
+//
+// This program is free software: you can redistribute it and/or
+// modify it under the terms of the GNU General Public License
+// as published by the Free Software Foundation; either version 3
+// of the License, or (at your option) any later version.
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+// See the GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 #include "MainWindow.h"
 
+#include <OEG/Qt/Application.h>
 #include <OEG/Qt/ToolProvider.h>
 
 #include <QMenuBar>
@@ -14,14 +31,10 @@
 MainWindow::MainWindow(QWidget *parent /*=0*/)
  : OEG::Qt::MainWindow(parent)
 {
-  createActions();
-  createMenus();
-  createToolBars();
-  createStatusBar();
-  createDockWidgets();
+  createAll();
 
-  setWindowTitle("WiXi");
   setWindowIcon(QIcon("icon.png"));
+
 }
 
 void MainWindow::createActions()
@@ -30,19 +43,19 @@ void MainWindow::createActions()
 
 void MainWindow::createMenus()
 {
-  QMenu *fileMenu = menuBar()->addMenu(tr("&File"));
+  QMenu *fileMenu = menuBar()->addMenu(_("&File"));
 
 }
 
 void MainWindow::createToolBars()
 {
-  QToolBar *fileToolBar = addToolBar(tr("File"));
+  QToolBar *fileToolBar = addToolBar(_("File"));
 
 }
 
 void MainWindow::createStatusBar()
 {
-  statusBar()->showMessage(tr("Ready."));
+  statusBar()->showMessage(_("Ready."));
 }
 
 void MainWindow::createDockWidgets()
